<resources>
    <string name="app_name">HateWait</string>

    <string-array name="menu_store">
        <item>신규가게 등록하기</item>
        <item>가게 정보 수정하기</item>
        <item>대기 현황 확인하기</item>
        <item>현장 대기 받기(태블릿)</item>
    </string-array>

    <string-array name="menu_customer">
        <item>대기중인 가게 확인하기</item>
        <item>다른가게 줄 확인하기</item>
    </string-array>

    <string name="fcm_server_key">AAAADFuBNLs:APA91bFIXgmQdl1BI8uySmcALicDNbrgQwD8Y576IyrRAKe-BdYZDLmon5J4BKeUxMYzcFEBay8cJ1ntNDnmZ7QKCX1z-ldyZJKkiQSk4qdm3sBXLfVvwoyFv6JSgA8oI12pdgyELc_d</string>

    <string name="notification_dialog_message">가게에 오셔서 직원에게 안내를 받으세요. 가게에 오실 건가요?</string>
    <string name="customer_marquee">내 차례가 되면 상태바 알림과 문자 알림이 발송됩니다. 취소 버튼을 눌러 대기를 취소할 수 있습니다.</string>


    <string name="title_activity_add_new_store">AddNewStore</string>

    <string name="title_activity_join">JoinActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="default_notification_channel_id">HATEWAIT</string>

    <!--    Customer / Store 공통 -->
    <string name="id_input_hint">이메일 아이디를 입력해주세요</string>
    <string name="id_check_hint">전송된 인증번호를 입력해주세요.</string>
    <string name="id_input_error">이메일 형식으로 입력해주세요.</string>
    <string name="password_input_hint">비밀번호를 입력해주세요</string>
    <string name="password_reinput_hint">비밀번호를 다시 입력해주세요</string>
    <string name="password_input_error">영문, 숫자, 특수문자 포함 8자 이상 입력해주세요</string>
    <string name="password_reinput_error">비밀번호가 일치하지 않아요</string>
    <!--    Store -->
    <string name="store_register_menu_title">가게 회원가입</string>
    <string name="store_phone_error_message">9~11자리 전화번호를 입력해주세요</string>
    <string name="store_name_error_message">특수문자는 허용되지 않아요.</string>
    <string name="store_description_error_message">반드시 1글자 이상 입력해주세요</string>
    <string-array name="user_info_hint">
        <item>@string/id_input_hint</item>
        <item>@string/password_input_hint</item>
    </string-array>


    <string name="customer_mode">CUSTOMER_USER_INFO</string>
    <string name="store_mode">STORE_USER_INFO</string>

    <string-array name="naver_login_api">
        <item>82cffPlMCADZx2gteyWB</item>
        <item>AuVYTrPqZh</item>
        <item>HateWait</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_manage_stamp_coupon">ManageStampCouponActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="pref_key_transition_time" translatable="false">pref_key_transition_time</string>

    <string name="serverUrl">https://hatewait-server.herokuapp.com/</string>
</resources>
