<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StoreRegister">
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/register_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/Theme.AppCompat.Light">

        <TextView
                android:id="@+id/register_toolbar_title_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_register_menu_title"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/custom_id_icon"
            app:startIconContentDescription="ID"
            app:endIconMode="clear_text"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_toolbar">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_input_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id_input_hint"
                android:inputType="text"
                android:selectAllOnFocus="true"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/custom_password_icon"
            app:startIconContentDescription="Name"
            app:endIconMode="password_toggle"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/id_input_layout"
            app:layout_constraintEnd_toEndOf="@id/id_input_layout"
            app:layout_constraintTop_toBottomOf="@id/id_input_layout">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_input_hint"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_reinput_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/custom_password_icon"
            app:startIconContentDescription="Name"
            app:endIconMode="password_toggle"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/password_input_layout"
            app:layout_constraintEnd_toEndOf="@id/password_input_layout"
            app:layout_constraintTop_toBottomOf="@id/password_input_layout">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_reinput_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="비밀번호를 다시 입력해주세요"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/register_progress_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password_reinput_layout"
            app:layout_constraintEnd_toEndOf="@id/password_reinput_layout"
            android:text="1/4"
            android:textSize="15sp"
            android:textColor="@color/colorAccent"/>
    <ProgressBar
            android:id="@+id/register_progressbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:progress="1"
            android:max="4"
            app:layout_constraintStart_toStartOf="@id/password_reinput_layout"
            app:layout_constraintEnd_toEndOf="@id/password_reinput_layout"
            app:layout_constraintTop_toBottomOf="@id/register_progress_textView"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

    <Button
            android:id="@+id/button_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@id/password_reinput_layout"
            app:layout_constraintEnd_toEndOf="@id/password_reinput_layout"
            app:layout_constraintTop_toBottomOf="@id/register_progressbar"
            android:enabled="false"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="계속하기"
            android:textSize="25dp"
            android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>